--- a/techno/style.css
+++ b/techno/style.css
@@ -35,6 +35,7 @@ body{
   margin-bottom: 40px;
   background: #ffff;
   box-shadow: 0 0 2rem rgba(0, 0, 0, .1);
+  cursor: pointer;
 }
 
 .produto_img{
